<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@color/light_Grey"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_7"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_8"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_9"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/light_Grey"
            android:text="@string/_Divide"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_4"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_5"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_6"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/light_Grey"
            android:text="@string/_Multiply"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_2"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_3"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/light_Grey"
            android:text="@string/_Minus"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_0"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/_Dot"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/buttonClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/heavy_Grey"
            android:textColor="@color/light_Grey"
            android:text="@string/clr"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/light_Grey"
            android:text="@string/_Add"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEqual"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/_Equal"
            android:textColor="@color/light_Grey" />

    </LinearLayout>
</LinearLayout>